# insurance-ontology-kor

./: .gitignore  README.md
backend-app/: README.md  pyproject.toml  requirements.txt
backend-app/app/: config.py  dependencies.py  main.py
backend-app/app/api/: chat.py  health.py  mock.py  mydata.py  personas.py  scenarios.py
backend-app/app/clients/: bedrock_client.py  embedding_client.py  neptune_client.py  opensearch_client.py  s3_client.py
backend-app/app/core/: answer_generator.py  glossary_expander.py  hallucination_validator.py  hybrid_scorer.py  intent_classifier.py  orchestrator.py  template_router.py  traversal_engine.py
backend-app/app/data/: glossary.json  personas.json  scenarios.json
backend-app/app/middleware/: rbac.py
backend-app/app/models/: intent.py  mydata.py  persona.py  query.py  response.py  scoring.py  template.py  traversal.py  validation.py
backend-app/app/services/: mydata_service.py
backend-app/scripts/: warmup.py
backend-app/tests/: conftest.py  test_answer_generator.py  test_api_chat.py  test_api_health.py  test_api_mock.py  test_api_mydata.py  test_api_personas.py  test_api_scenarios.py  test_bedrock_client.py  test_embedding_client.py  test_glossary_expander.py  test_hallucination_validator.py  test_hybrid_scorer.py  test_intent_classifier.py  test_models.py  test_mydata_service.py  test_neptune_client.py  test_opensearch_client.py  test_orchestrator.py  test_orchestrator_comparison.py  test_orchestrator_mydata.py  test_rbac.py  test_s3_client.py  test_template_router.py  test_traversal_engine.py
cdk-app/: README.md  (+5 more)
(+138 files in other folders)
