[project]
name = "ontology-demo-backend"
version = "0.1.0"
description = "Insurance Ontology GraphRAG Engine — FastAPI Backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100
